Fix av overflow av list-item

--- a/projects/komponentkartan/src/assets/partials/_components.list.scss
+++ b/projects/komponentkartan/src/assets/partials/_components.list.scss
@@ -47,9 +47,8 @@
 }
 
 .list-item-content {
-  overflow: hidden;
-  &.overflow-visible {
-    overflow: visible;
+  &.ng-animating {
+    overflow: hidden;
   }
 }
 
